test/fixtures/type-error/noOverload2.ro
type int = ???
type float = ???

fun x(): int = 1
fun x(a: int): int = 1

export fun test(): int = x(1.0)
